# squid

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: cli.rs
src/: app.rs  config.rs  deps.rs  http.rs  io.rs  lib.rs  main.rs  md.rs  rss.rs  template.rs  tinylang.rs  watch.rs
tests/: config.toml  integration.rs
tests/markdown/posts/: post_file_name.md  post_file_name_2.md
tests/output/: example.html  index.html  rss.xml
tests/output/posts/: post_file_name.html  post_file_name_2.html
tests/templates/: _partial.template  _posts.template  example.template  index.template
